--- a/Slovak/main/MiuiBugReport.apk/res/values-sk/strings.xml
+++ b/Slovak/main/MiuiBugReport.apk/res/values-sk/strings.xml
@@ -709,4 +709,70 @@ Veľkosť: %2$s"</string>
     <string name="wednesday_short">Str</string>
     <string name="wednesday_shortest">Str</string>
     <string name="yesterday">Včera</string>
+    
+<string name="access_denied_info">Príliš veľa pokusov. Počkajte minútu alebo dve a skúste to znova.</string>
+     <string name="catch_full_log_item_title_camera">Fotoaparát</string>
+     <string name="catch_full_log_item_title_charge">Nabíjanie</string>
+     <string name="catch_full_log_item_title_trace">Zasekávanie</string>
+     <string name="catch_full_log_privacy_content_camera">"Generujete denníky a ukladáte ich do svojho zariadenia. Denníky môžu obsahovať informácie o využití fotoaparátu (vrátane frekvencie procesora, systémových volaní, využitia pamäte atď.). Buďte opatrní a neprezrádzajte ich logy iným ľuďom. Klepnutím na \"Súhlasím\" nižšie vyjadrujete súhlas s tým, že pri generovaní denníkov budeme zhromažďovať vyššie uvedené údaje a potom ich nahrať na naše servery, aby sme našli a vyriešili problémy, ktoré nahlásite.“ </string>
+     <string name="catch_full_log_privacy_content_charge">"Generujete denníky a ukladáte ich do svojho zariadenia. Denníky môžu obsahovať štatistiky účtovania. Buďte opatrní a neprezrádzajte tieto denníky iným ľuďom. Klepnutím nižšie na \"Súhlasím\" súhlasíte s tým, že pri generovaní denníkov budeme zhromažďovať vyššie uvedené údaje a potom denníky nahrať na naše servery, aby sme našli a vyriešili problémy, ktoré nahlásite.“</string>
+     <string name="catch_full_log_privacy_content_trace">"Generujete denníky a ukladáte ich do svojho zariadenia. Denníky môžu obsahovať štatistiky využitia aplikácií (vrátane frekvencie procesora, systémového volania, využitia pamäte atď.). Buďte opatrní a neprezrádzajte tieto denníky ďalším ľuďom. Klepnutím na tlačidlo „Súhlasím“ nižšie vyjadrujete súhlas s tým, že pri generovaní denníkov budeme zhromažďovať vyššie uvedené údaje a potom denníky odovzdať na naše servery, aby sme našli a vyriešili problémy, ktoré nahlásite. "</string>
+     <string name="character_counter_content_description">Prekročili ste limit počtu znakov %1$d z %2$d</string>
+     <string name="doing_login">Prihlasuje sa…</string>
+     <string name="doing_query_account">Kontrolujú sa informácie o účte…</string>
+     <string name="doing_register">Vytvára sa účet…</string>
+     <string name="header_help">Pomocník</string>
+     <string name="i_get_it">Rozumiem</string>
+     <string name="i_know">Rozumiem</string>
+     <string name="input_length_exceeds_limit">Zadaný text je príliš dlhý</string>
+     <string name="login_by_local_phone_long_text">Prihláste sa teraz</string>
+     <string name="login_by_local_phone_short_text">Prihlásiť sa</string>
+     <string name="login_other">Ďalší účet Mi</string>
+     <string name="login_register_by_local_phone_long_text">Vytvoriť účet</string>
+     <string name="login_with_sns">Iné spôsoby prihlásenia</string>
+     <string name="mishop_login_other">Iný účet</string>
+     <string name="network_error_info">Vyskytla sa chyba siete. Skontrolujte nastavenia siete a skúste to znova.</string>
+     <string name="network_timeout_info">"Nepodarilo sa pripojiť k sieti. Skúste to znova."</string>
+     <string name="open_settings">Nastavenia</string>
+     <string name="passport_can_not_receive_verification_code">„Nemôžete prijať overovací kód?“</string>
+     <string name="password_toggle_content_description">Zobraziť heslo</string>
+     <string name="please_agree_protocal">Protokol súhlasu prosím</string>
+     <string name="privacy_policy_update_hint">"Zásady ochrany osobných údajov %1$s boli aktualizované:
+%2$s
+Pred pokračovaním si prečítajte a vyjadrite súhlas s novou verziou %3$s."</string>
+     <string name="privacy_policy_update_title">Aktualizované zásady ochrany osobných údajov</string>
+     <string name="progressbar_title">Kontrolujú sa problémy so zabezpečením...</string>
+     <string name="protocal_dialog_cancel">Zrušiť</string>    
+     
+<string name="protocal_dialog_confirm">Súhlasím</string>
+     <string name="protocal_dialog_title">Pozor</string>
+     <string name="register_by_local_phone_long_text">Vytvoriť účet</string>
+     <string name="register_by_local_phone_short_text">Vytvoriť účet</string>
+     <string name="request_agree">Povoliť</string>
+     <string name="request_camera_permission_message">Vaše osobné údaje budeme chrániť v súlade s príslušnými zákonmi a nariadeniami. Táto aplikácia potrebuje na normálne fungovanie nasledujúce povolenia: Používanie fotoaparátu (napr. nastavenie vašej profilovej fotografie) Ak nesúhlasíte s udelením takýchto povolení, nebudete môcť používať niektoré funkcie tejto aplikácie; jej základné funkcie však budú byť vám k dispozícii. Povolenia môžete kedykoľvek obmedziť alebo svoju autorizáciu odvolať v Nastaveniach.</string>
+     <string name="request_cancel">Zrušiť</string>
+     <string name="request_error_invalid_token">"Nepodarilo sa overiť"</string>
+     <string name="request_error_network">Vyskytla sa chyba siete. Skontrolujte nastavenia siete a skúste to znova.</string>
+     <string name="request_error_unknown">Vyskytla sa systémová chyba. Vráťte sa a skúste to znova.</string>
+     <string name="request_gallery_permission_message">Povoliť prístup do Galérie: na nastavenie profilových fotografií</string>
+     <string name="skip_query_account">Preskočiť</string>
+     <string name="submit_dialog_content_global_with_contactinfo">Vaša spätná väzba spolu s prílohami (ak existujú), denníkmi (môžete zrušiť začiarknutie príslušných políčok pri položkách, ktoré nechcete nahrať), telefónnym číslom alebo e-mailom sa odošle na servery MIUI. Protokoly môžu obsahovať osobné informácie a údaje o vašej polohe. Výberom možnosti \"Súhlasím\" znamená, že ste si prečítali našu Ochranu súkromia a súhlasíte s nimi a Podmienky používania.</Data></string>
+     <string name="system_error_info">Systém je zaneprázdnený. Počkajte minútu alebo dve a skúste to znova.</string>
+     <string name="unknown_error_info">Neznáma chyba</string>
+     <string name="user_agreement_hint_3rd_app">Prečítal som si Podmienky používania a Ochranu súkromia.</Data></string>
+     <string name="user_agreement_hint_default">Prečítal som si Podmienky používania a Ochranu súkromia.</string>
+     <string name="user_agreement_hint_default_1">Prečítal som si Podmienky používania a Ochranu súkromia.</string>
+     <string name="user_agreement_hint_default_extra">Prečítal som si Podmienky používania a Ochranu súkromia.</string>
+     <string name="user_agreement_hint_first_login">Ak používate svoje telefónne číslo prvýkrát, účet vám vytvoríme automaticky.</string>
+     <string name="user_agreement_protocal_dialog_hint_default">Prečítal som si Podmienky používania a Ochranu súkromia.</string>
+     <string name="user_must_known">Pozor</string>
+     <string name="user_must_known_content">Nebudete môcť naďalej používať naše služby, pokiaľ nevyjadríte súhlas s novou verziou nášho %s. Súhlasíte teraz s aktualizovanými Zásadami ochrany osobných údajov?</string>
+     <string name="user_name_phone_number">Telefónne číslo</string>
+     <string name="withdraw">Vybrať</string>
+     <string name="withdraw_consent">Odvolanie súhlasu</string>
+     <string name="withdraw_consent_failed">"Súhlas sa nepodarilo odvolať"</string>
+     <string name="withdraw_consent_failed_hint">Vyskytla sa chyba servera. Počkajte minútu alebo dve a skúste to znova.</string>
+     <string name="withdraw_consent_failed_hint_connect_net">Vaše zariadenie sa musí pripojiť k sieti, aby ste mohli odvolať súhlas. Skontrolujte nastavenia siete a skúste to znova.</string>
+<string name="withdraw_consent_hint">Ak budete pokračovať, odvoláte svoj súhlas so Zásadami ochrany osobných údajov %1$s. Osobné údaje, ktoré už boli zhromaždené a uchovávané, budú vymazané počas konkrétneho obdobia v súlade s platnými zákonmi a nariadeniami pokiaľ to nie je potrebné inak. Keďže %2$s poskytuje svoje služby na základe zhromažďovania potrebných osobných informácií, vaše odvolanie súhlasu sa bude považovať za odmietnutie akceptovania služieb %3$s. Odvolať súhlas teraz?</string>
+      <string name="withdrawing">Odvoláva sa súhlas...</string>
 </resources>
