--- a/Slovak/main/HTMLViewer.apk/res/values-sk/strings.xml
+++ b/Slovak/main/HTMLViewer.apk/res/values-sk/strings.xml
@@ -121,7 +121,7 @@
   <string name="fmt_date_short_year_month">MMM, yyyy</string>
   <string name="fmt_date_short_year_month_day">d MMM, yyyy</string>     
   
-
+<string name="user_experience_program">Program používateľskej skúsenosti</string>
     <string name="today">Dnes</string>
     <string name="tomorrow">Zajtra</string>   
 </resources>  
