--- a/Slovak/main/SecurityCenter.apk/res/values-sk/strings.xml
+++ b/Slovak/main/SecurityCenter.apk/res/values-sk/strings.xml
@@ -5466,5 +5466,5 @@ k zvýšenej spotrebe batérie a prehrievaniu"</string>
      <string name="sms_sender">"Komu: "</string>
      <string name="verify_sms_ensure_allow">Odoslať</string>
      <string name="verify_sms_title">%1$s sa pokúša odoslať správu…</string>
-                              
+<string name="system_permission_declare_optional">Na poskytovanie ďalších služieb počas používania aplikácie môžeme potrebovať nasledujúce povolenia: %s. Predvoľby povolení môžete kedykoľvek upraviť v časti Nastavenia.</string>                              
 </resources>  
