--- a/Slovak/main/wps-lite.apk/res/values-sk/strings.xml
+++ b/Slovak/main/wps-lite.apk/res/values-sk/strings.xml
@@ -272,4 +272,62 @@
     <string name="writer_wordcounts_tips_selection">Výber: %d</string>
     <string name="writer_words">Počet slov</string>
     <string name="writer_words_exceeds_not_operated">Prekročený maximálny počet slóv. Operáciu nie je možné dokončiť.</string>
+	
+<string name="chart_NotSupportedPic_bmw">Tento obrázok sa momentálne nedá zobraziť.</string>
+      <string name="chart_OtherCategoryName_bmw">Iné</string>
+      <string name="chart_defaultAxisTitle_bmw">Názov osi</string>
+      <string name="chart_defaultChartTitle_bmw">Názov grafu</string>
+      <string name="chart_exponencial_bmw">Exponenciálny</string>
+      <string name="chart_linear_bmw">Lineárne</string>
+      <string name="chart_logarithmic_bmw">Logaritmické</string>
+      <string name="chart_moving_bmw">Kĺzavý priemer</string>
+      <string name="chart_polynomaial_bmw">Polynóm</string>
+      <string name="chart_power_bmw">Napájanie</string>
+      <string name="chart_series_bmw">Séria</string>
+      <string name="chart_unsupport_bmw">Tento graf sa nedá nakresliť</string>
+	  <string name="func_extract_sheet">Extrahovať</string>
+      <string name="func_output_as_pic">Obrázok</string>
+      <string name="func_pdf_to_word">Slovo</string>
+      <string name="func_smart_typography">Inteligentné rozloženie</string>
+      <string name="func_translate_title">Preložiť celý dokument</string>
+	  <string name="highlight">Zvýraznenie</string>
+	  <string name="public_lite_cloud_dialog_message">Použite WPS Office, užite si službu %s</string>
+      <string name="public_lite_update_cloud_dialog_message">Aktualizujte WPS Office, užite si službu %s</string>
+      <string name="public_mi_agree_desc">Povoľte tejto aplikácii pripojenie k internetu a udeľte povinné povolenia uvedené vyššie.</string>
+      <string name="public_mi_privacy_desc">Na prezeranie a správu dokumentov na tomto zariadení</string>
+      <string name="public_mi_privacy_purpose">Vitajte v prehliadači Mi Doc Viewer (používa technológiu WPS)! Toto je vlastná verzia aplikácie, ktorú vytvoril Kingsoft pre Xiaomi. Túto aplikáciu môžete použiť na prezeranie dokumentov na svojom zariadení.</string>
+	  <string name="public_pdf_converter_item_name">PDF</string>
+      <string name="public_pdf_converter_normal">Normálne</string>
+      <string name="public_pdf_converter_open_tip">Otvoriť tento dokument?</string>
+      <string name="public_pdf_converter_success">"Exportované do "</string>
+      <string name="public_pdf_converter_success_open">Otvoriť</string>
+      <string name="public_pdf_converter_success_tip">Úspešne exportované</string>
+      <string name="public_pdf_converter_title">Exportovať</string>
+      <string name="public_pdf_converter_water">Vodoznak</string>
+      <string name="public_pdf_convertering_title">Exportuje sa…</string>
+      <string name="public_pdf_print_converting">Pripravuje sa tlač...</string>
+      <string name="public_pdf_print_fail">Dokument sa nepodarilo vytlačiť</string>
+      <string name="public_pdf_print_title">Tlačiť</string>
+	  <string name="public_sensor_ratation_land_tip">Orientácia na šírku</string>
+     <string name="public_sensor_ratation_port_tip">Orientácia na výšku</string>
+     <string name="public_thumbnail_title">Ukážka</string>
+     <string name="reader_ppt_autoplay">automatické prehrávanie</string>
+     <string name="reader_ppt_play_exit">ukončiť</string>
+     <string name="reader_ppt_play_options">Možnosti</string>
+     <string name="reader_ppt_slide_list_new">Vložiť</string>
+     <string name="reader_public_cancel">zrušiť</string>
+     <string name="reader_public_close">zavrieť</string>
+     <string name="reader_public_next">ďalší</string>
+     <string name="reader_public_previous">predchádzajúce</string>
+     <string name="reader_public_textcontextmenu">zobrazuje sa %1$s prvok %2$s</string>
+     <string name="reader_writer_accept_revision">prijmite revíziu</string>
+     <string name="reader_writer_delete_comment">odstrániť komentár</string>
+     <string name="reader_writer_hide">menej</string>
+     <string name="reader_writer_more">viac</string>
+     <string name="reader_writer_page_num">Strana %1$s</string>
+     <string name="reader_writer_paste_options">možnosti prilepenia</string>
+     <string name="reader_writer_reject_revision">odmietnuť revíziu</string>
+     <string name="reader_writer_table_edit_add_column">pridať stĺpec</string>
+     <string name="reader_writer_table_edit_add_row">pridať riadok</string>
+	 <string name="ss_card_mode_filter_title_text">Vyberte položky na zobrazenie</string>
 </resources>
