--- a/Slovak/main/Provision.apk/res/values-sk-rSK/strings.xml
+++ b/Slovak/main/Provision.apk/res/values-sk-rSK/strings.xml
@@ -375,4 +375,162 @@ Pred použitím tejto funkcie musíte súhlasiť so Zásadami ochrany osobných 
     
 <string name="user_agreement_declare_gmscore">Pred používaním MIUI, musíte odsúhlasiť naše Podmienky používania a Ochranu súkromia.</string>
       <string name="user_agreement_declare_wifi_device_gmscore">Pred používaním MIUI, musíte odsúhlasiť naše Podmienky používania a Ochranu súkromia.</string>
+     
+<string name="access_non_personal_data">Ak odvoláte súhlas s prístupom a používaním neosobných údajov zo svojho zariadenia, služby Wallpaper Carousel budú deaktivované a všetky zhromaždené údaje budú vymazané v lehote stanovenej v príslušných zákonoch a nariadeniach.</string>
+     <string name="address_dialing_introduction">Túto aplikáciu môžete použiť na uskutočňovanie hovorov, zobrazenie histórie hovorov a správu kontaktov.</string>
+     <string name="agree_cookie">Prijať súbory cookie</string>
+     <string name="backup_introduction">Túto aplikáciu môžete použiť na zálohovanie a obnovenie položiek na vašom zariadení.</string>
+     <string name="bluetooth_introduction">Bluetooth systém používa na bezdrôtovú komunikáciu. Aby mohol Bluetooth normálne fungovať, potrebuje nasledujúce povolenia:</string>
+     <string name="boot_video_replay">Znova</string>
+     <string name="boot_video_skip">Preskočiť</string>
+     <string name="camera_application_introduction">Túto aplikáciu môžete použiť na snímanie fotografií a videí.</string>
+     <string name="copy">Kopírovať</string>      
+
+<string name="disagreement_abnormal_running_fast_pairing">"Ak nesúhlasíte s udelením takého povolenia, nemôžete túto aplikáciu používať. V takých prípadoch môžete obmedziť povolenie a túto funkciu v Nastaveniach." </string>
+     <string name="disagreement_application_not_working_properly">„Ak nesúhlasíte s udelením týchto povolení, nebudete môcť túto aplikáciu používať.“</string>
+     <string name="disagreement_fast_pairing_abnormal">"Ak nesúhlasíte s udelením týchto povolení, nebudete môcť túto aplikáciu používať. Túto službu môžete kedykoľvek zapnúť alebo v časti Nastavenia > Bluetooth > Ďalšie nastavenia > Mi Link."</string>
+     <string name="disagreement_location_service_abnormal">"Ak nesúhlasíte s udelením týchto povolení, nebudete môcť používať lokalizačné služby. Lokalizačné služby môžete kedykoľvek zapnúť alebo vypnúť v časti Nastavenia > Ochrana súkromia."</string>
+     <string name="disagreement_mi_account_abnormal">"Ak nesúhlasíte s udelením týchto povolení, nebudete môcť používať služby účtu Mi. Služby účtu Mi môžete kedykoľvek zapnúť alebo vypnúť v časti Nastavenia > Účet Mi. "</string>
+     <string name="disagreement_service_not_working_properly">„Ak nesúhlasíte s udelením týchto povolení, nebudete môcť túto aplikáciu používať.“</string>
+     <string name="disagreement_terminate_bluetooth">"Ak nechcete udeliť tieto povolenia, nebudete môcť používať Bluetooth. Bluetooth môžete zapnúť a vypnúť a pridať zariadenia Bluetooth v nastaveniach."</string>
+     <string name="expand_button_title">Rozšírené</string>
+<string name="fast_pairing_introduction">Mi Link využíva funkcie MIUI Bluetooth, aby ste sa mohli rýchlo pripojiť k zariadeniam Bluetooth v okolí.</string>
+     <string name="ims_introduction">Služba IMS poskytuje základné komunikačné možnosti a používa sa na audio a video hovory vo vysokom rozlíšení.</string>
+     <string name="interconnection_communication_introduction">Služby internetovej komunikácie Xiaomi vám umožňujú objavovať, pripájať sa a komunikovať s inými zariadeniami Xiaomi.</string>
+     <string name="item_lock_screen_password_only">Zámka obrazovky</string>
+     <string name="ktposition_header">Zdieľanie informácií o polohe so záchrannými agentúrami</string>
+     <string name="location_location">Agentúry záchrannej služby môžu na požiadanie získať vašu aktuálnu polohu</string>
+<string name="mobile_network">Použiť mobilné dáta</string>
+     <string name="move_data_dialog_box_le">"Toto umožňuje používanie mobilných dát a pripojenia GPS na základe požiadavky používateľa. Synchronizácia účtov a iných položiek môže vyžadovať použitie mobilných dát v závislosti od špecifikácií smartfónu."</string>
+     <string name="move_data_dialog_box_title">Pokiaľ nemáte plán s neobmedzenými dátami, používanie mobilných dát môže generovať ďalšie poplatky operátora. Chcete napriek tomu používať mobilné dáta?</string>
+     <string name="move_data_dialog_cancel">Zrušiť</string>
+     <string name="move_data_dialog_title">Mobilné dátové pripojenie môžete neskôr obmedziť v Nastaveniach</string>
+     <string name="move_data_dialog_use">Použiť</string>
+     <string name="not_set">Nenastavené</string>
+     <string name="other_settings_ad_dialog_content_for_global">"Keď sú odporúčania prispôsobených reklám vypnuté, v systémových aplikáciách MIUI sa vám bude stále zobrazovať rovnaké množstvo reklám, ako keď je táto funkcia zapnutá. Reklamy od Xiaomi a platforiem tretích strán sa však už nebudú relevantné, pretože nebudú založené na vašich osobných preferenciách.“</string>     
+<string name="permission_access_calendar">Prístup ku kalendáru</string>
+     <string name="permission_access_calendar_fast_application_summary">Na umožnenie prístupu rýchlych aplikácií ku kalendáru;</string>
+     <string name="permission_backup">Prístup k úložisku</string>
+     <string name="permission_backup_introduction">Pre prístup a ukladanie záloh na vašom zariadení</string>
+     <string name="permission_call_records_describe_bluetooth_summary">Za umožnenie prístupu k histórii hovorov vašim ďalším kompatibilným zariadeniam, ktoré k tomuto zariadeniu pripojíte. Stane sa tak iba vtedy, keď budete proaktívne vyžadovať používanie histórie hovorov cez iné zariadenie. História hovorov a kontakty zdieľané systémom cez Bluetooth sa budú ukladať iba lokálne do vyrovnávacej pamäte vo vašich zariadeniach a budú sa s nimi zdieľať s vaším povolením.</string>
+     <string name="permission_contact_describe">Prístup ku kontaktom</string>
+     <string name="permission_contact_describe_MIUIDaemon_summary">Na overenie vašej identity.</string>
+     <string name="permission_contact_describe_bluetooth_summary">Za umožnenie prístupu ku kontaktom vašim ďalším kompatibilným zariadeniam, ktoré k tomuto zariadeniu pripojíte. Stane sa to iba vtedy, keď zapnete Bluetooth alebo upravíte svoje kontakty, keď je Bluetooth zapnuté.</string>
+     <string name="permission_contact_describe_desktop_summary">Na používanie funkcie núdzového kontaktu na ploche v zjednodušenom režime a zobrazovanie upozornení na konverzáciu;</string>
+     <string name="permission_contact_describe_message_summary">Na zobrazenie zodpovedajúcich kontaktných informácií SMS a MMS.</string>
+     <string name="permission_device">Prístup k informáciám o zariadení</string>
+     <string name="permission_device_desktop_summary">Pre prístup k informáciám o zariadení (napr. názov operátora);</string>
+     <string name="permission_device_fast_pairing_summary">Pre prístup k stavu zariadenia a jeho komunikáciu s nositeľnými zariadeniami;</string>
+     <string name="permission_device_message_summary">Na odosielanie a prijímanie SMS a MMS;</string>
+     <string name="permission_device_mi_account_summary">Na zaistenie bezpečnosti prihlasovacieho prostredia.</string>
+     <string name="permission_fast_pairing">Aby bolo možné nájsť zariadenia v okolí, Mi Link sa musí pripojiť k internetu a vyžaduje nasledujúce povolenia:</string>
+     <string name="permission_location_describe">Prístup k polohe</string>
+     <string name="permission_location_describe_desktop_summary">Na prístup k názvom sietí Wi-Fi;</string>
+     <string name="permission_location_describe_fast_application_summary">Na umožnenie prístupu rýchlych aplikácií k vašej polohe;</string>
+     <string name="permission_location_describe_fast_pairing_summary">Na zobrazenie dostupných zariadení Bluetooth s nízkou spotrebou energie;</string>
+     <string name="permission_location_describe_interconnection_communication_summary">Na prístup k vašej polohe na poskytovanie služieb vyhľadávania a pripojenia pomocou rozhrania Bluetooth alebo Wi-Fi;</string>
+     <string name="permission_location_describe_location_summary">Pre prístup k vašej presnej polohe s cieľom poskytnúť rôzne služby založené na polohe.</string>
+     <string name="permission_make_a_call">Uskutočňovať hovory</string>
+<string name="permission_make_a_call_fast_application_summary">Na umožnenie rýchlym aplikáciam uskutočňovať hovory;</string>
+     <string name="permission_read_app_list">Prístup k zoznamu aplikácií nainštalovaných v tomto zariadení</string>
+     <string name="permission_read_application_list_summary">Na aktualizáciu stiahnutých aplikácií a potvrdenie informácií o aplikácii, ktoré používa inštalátor balíka;</string>
+     <string name="permission_read_contacts">Prístup ku kontaktom</string>
+     <string name="permission_read_contacts_introduction">Na overenie vašej identity</string>
+     <string name="permission_read_device_store">Prístup k úložisku zariadenia</string>
+     <string name="permission_read_device_store_summary">Na prístup k stiahnutým zdrojovým súborom a zdrojovým konfiguračným súborom;</string>
+     <string name="permission_read_message">Prístup k textovým správam</string>
+     <string name="permission_read_message_introduction">Na overenie vlastníctva vášho zariadenia</string>
+     <string name="permission_read_send_message">Odosielať a prijímať SMS</string>
+     <string name="permission_read_send_message_fast_application_summary">Na umožnenie rýchlym aplikáciám odosielať a prijímať SMS;</string>
+     <string name="permission_read_send_message_sim_activation_summary">Na odosielanie a prijímanie aktivačných SMS;</string>
+     <string name="permission_read_send_message_summary">Na prijímanie, prezeranie a odosielanie SMS;</string>
+     <string name="permission_read_send_multimedia_message">Odosielať a prijímať MMS</string>
+     <string name="permission_read_send_multimedia_message_summary">Na prijímanie, prezeranie a odosielanie MMS;</string>
+     <string name="permission_read_write_call_log">Prístup a úprava histórie hovorov</string>
+     <string name="permission_read_write_call_log_summary">Na zobrazenie a úpravu histórie hovorov.</string>
+     <string name="permission_read_write_contacts">Prístup ku kontaktom a ich úprava</string>
+     <string name="permission_read_write_contacts_fast_application_summary">Na umožnenie rýchlym aplikáciám pristupovať ku kontaktom a upravovať ich;</string>
+     <string name="permission_read_write_contacts_summary">Na prezeranie a správu kontaktov;</string>
+     <string name="permission_read_write_device_store">Prístup k položkám a ich uloženie do úložiska</string>
+     <string name="permission_read_write_device_store_album_summary">Na ukladanie, zobrazenie, úpravu, synchronizáciu a sťahovanie vašich fotografií a videí.</string>
+     <string name="permission_read_write_device_store_application_package_summary">Na analýzu a skenovanie inštalačných balíkov.</string>
+     <string name="permission_read_write_device_store_camera_summary">Na ukladanie súborov do zariadenia po nasnímaní fotografií alebo videí.</string>
+     <string name="permission_read_write_device_store_download_summary">Na ukladanie do vyrovnávacej pamäte, prístup a správu prevzatého obsahu.</string>
+     <string name="permission_read_write_device_store_fast_application_summary">Umožňuje rýchlym aplikáciám prístup, vyrovnávaciu pamäť a úpravu súborov;</string>
+     <string name="permission_read_write_phone_store">Na prístup a ukladanie položiek do úložiska zariadenia;</string>
+     <string name="permission_read_write_phone_store_summary">Pre prístup a ukladanie položiek na ploche;</string>
+     <string name="permission_use_camera">Prístup k fotoaparátu</string>
+<string name="permission_use_camera_camera_summary">Na fotenie, nahrávanie videí a používanie blesku;</string>
+     <string name="permission_use_camera_desktop_summary">Na určenie, či podporovať funkciu baterky;</string>
+     <string name="permission_use_camera_fast_application_summary">Na umožnenie prístupu rýchlych aplikácií k fotoaparátu;</string>
+     <string name="permission_use_camera_ims_summary">Na uskutočňovanie videohovorov.</string>
+     <string name="permission_use_microphone">Prístup k mikrofónu</string>
+     <string name="permission_use_microphone_camera_summary">Na nahrávanie zvuku počas nahrávania videa;</string>
+     <string name="permission_use_microphone_desktop_summary">Na zobrazenie stavu nahrávania.</string>
+     <string name="permission_use_microphone_fast_application_summary">Na umožnenie prístupu rýchlych aplikácií k mikrofónu;</string>
+     <string name="permission_write_device_store">Uložiť položky do úložiska zariadenia</string>
+     <string name="permission_write_device_store_summary">Na ukladanie prevzatých zdrojových konfiguračných súborov do vyrovnávacej pamäte.</string>
+<string name="position_header">Zdieľanie informácií o polohe</string>
+      <string name="position_subheading">Informácie o polohe</string>
+<string name="preference_copied">\"%1$s\" bolo skopírované do schránky.</string>
+ 
+     <string name="privacy_provision_more">Viac informácií o ochrane súkromia</string>
+     <string name="privacy_provision_summary">Ochrana súkromia je záväzkom, ktorý stojí za dizajnom našich produktov</string>
+     <string name="privacy_provision_text">Zaviazali sme sa rešpektovať a chrániť vaše súkromie. Spoločnosť Xiaomi uprednostňuje výskum a vývoj v oblasti informačnej bezpečnosti a neustále pracuje na zlepšovaní metód, praktík a technických riešení, ktoré chránia vaše údaje. Naše najnovšie úspechy zdieľame aj s našimi partnermi, aby sme zaistili vaše súkromie vo všetkých oblastiach.</string>
+     <string name="privacy_provision_title">Ochrana osobných údajov</string>
+     <string name="privacy_refuse">Nesúhlasím</string>
+     <string name="privacy_title">Zmluvné podmienky a Zásady ochrany osobných údajov</string>
+     <string name="provision_back">Späť</string>
+     <string name="provision_next">Ďalej</string>
+     <string name="refuse_cookie">Odmietnuť súbory cookie</string>
+     <string name="require_authority_list_statement">Na to, aby táto služba mohla normálne fungovať, vyžaduje nasledujúce povolenia:</string>
+     <string name="require_network_and_authority_statement">Na to, aby mohla táto služba normálne fungovať, sa musí pripojiť k internetu a vyžaduje nasledujúce povolenia:</string>
+     <string name="require_network_authority_statement_dual">Na to, aby mohla táto služba normálne fungovať, sa musí pripojiť k internetu a vyžaduje nasledujúce povolenia:</string>
+     <string name="service_company_adjust_content">Zmluva s používateľom sieťových služieb Xunlei</string>
+     <string name="service_fast_pairing_policy">Pred pokračovaním si prečítajte a vyjadrite súhlas s Podmienkami používania.</string>
+     <string name="service_interconnection_communication">Služby internetovej komunikácie Xiaomi</string>
+     <string name="service_location_share_policy">Pred pokračovaním si prečítajte a vyjadrite súhlas s Podmienkami používania a Ochranou súkromia.</string>
+     <string name="service_mi_account">Účet Mi</string>
+     <string name="service_name_address_dialing">Kontakty a telefón</string>
+     <string name="service_name_backup">Zálohy</string>
+     <string name="service_name_bluetooth">Bluetooth</string>
+     <string name="service_name_fast_pairing">MiLink</string>
+     <string name="service_name_ims">Služba IMS</string>
+     <string name="service_name_message">Správy</string>
+<string name="service_sim_activation">Aktivácia SIM karty</string>
+      <string name="sim_activation_introduction">Služba aktivácie SIM karty overí informácie o aktuálne vloženej SIM karte, aby sa uistil, že služby MIUI môžu fungovať normálne. Tieto služby zahŕňajú Vyhľadanie zariadenia, vytváranie účtov Mi pomocou telefónnych čísel a synchronizáciu správ a histórie hovorov.</string>
+      <string name="sim_card_dial_card1">SIM 1 na hovory</string>
+      <string name="sim_card_dial_card2">SIM 2 na hovory</string>
+      <string name="sim_card_do_not_select_dial_card">Vybrať SIM pri hovore</string>
+      <string name="sim_card_network_card1">Dátová SIM 1</string>
+      <string name="sim_card_network_card2">Dátová SIM 2</string>      
+    <string name="term_condition_detail">Získajte úžasné obrázky a príbehy zobrazované na uzamknutej obrazovke každý deň.</string>
+     <string name="terms_of_use_label_RMS">Správca povolení</string>
+     <string name="terms_of_use_label_ai_assistant">Asistent AI</string>
+     <string name="terms_of_use_label_app_vault">Asistent</string>
+     <string name="terms_of_use_label_back">Služba zálohovania</string>
+     <string name="terms_of_use_label_ble">Poskytovateľ polohy</string>
+     <string name="terms_of_use_label_cloud">Xiaomi Cloud</string>
+     <string name="terms_of_use_label_communication_service">Služba internetovej komunikácie Xiaomi</string>
+     <string name="terms_of_use_label_finddevice">Vyhľadať zariadenie</string>
+     <string name="terms_of_use_label_game">Hry</string>
+     <string name="terms_of_use_label_home">Domovská obrazovka</string>
+     <string name="terms_of_use_label_htmlViewer">Zobrazovač HTML</string>
+     <string name="terms_of_use_label_htmlviewer">Zobrazovač HTML</string>
+     <string name="terms_of_use_label_landscape">funkcia optimalizácie zobrazenia na šírku</string>
+     <string name="terms_of_use_label_mi_account">Komponenty účtu Mi</string>
+     <string name="terms_of_use_label_os">Nastavenie AI OS</string>
+     <string name="terms_of_use_label_parallel_windows">Paralelné okná</string>
+     <string name="terms_of_use_label_power_detection">Detektor napájania</string>
+     <string name="terms_of_use_label_power_performance">Batéria a výkon</string>
+     <string name="terms_of_use_label_quickapp">Rýchle aplikácie</string>
+     <string name="terms_of_use_label_secure">Aplikácia zabezpečených prvkov</string>
+     <string name="terms_of_use_label_simcard">Služby aktivácie karty Mi SIM</string>
+     <string name="terms_of_use_label_smart_service">inteligentné služby</string>
+     <string name="terms_of_use_label_statistics">Štatistiky</string>
+     <string name="terms_of_use_label_translation">Prekladateľská služba</string>
+     <string name="terms_of_use_label_use_location_and_network_global">Pred použitím MIUI si musíte prečítať a súhlasiť s našimi Podmienkami používania a Ochranou súkromia. Vaše osobné údaje budeme chrániť v súlade s príslušnými zákonmi, nariadeniami a zásadami ochrany osobných údajov. Keď je vaše zariadenie aktivované, nasledujúce služby sa pripoja k sieti a získajú prístup k vašej polohe:</string>
+     <string name="terms_of_use_label_use_network_china">Pred použitím MIUI si musíte prečítať a súhlasiť s našimi Podmienkami používania a Ochranou súkromia. Vaše osobné údaje budeme chrániť v súlade s príslušnými zákonmi, nariadeniami a zásadami ochrany osobných údajov. Keď je vaše zariadenie aktivované, k sieti sa pripoja nasledujúce služby:</string>
+     <string name="terms_of_use_label_wallpaper">Tapeta</string>
+<string name="withdraw_consent">Ak svoj súhlas odvoláte, služby Dennej tapety budú deaktivované.</string>   
 </resources>  
